--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       </section>
 
       <section class="gallery">
-           <h2>Gallery</h2>
-        <div class="gallery-container">
-          <img class="cards"src="assets/image-1.jpg" alt="gallery1" width="400px">
-          <img class="cards" src="assets/image-2.jpg" alt="gallery2" width="400px">
-          <img class="cards" src="assets/image-3.jpg" alt="gallery3" width="400px">
-        </div>
-      </section>
-      
+        <h2>Gallery</h2>
+     <div class="gallery-container">
+       <img class="cards"src="assets/image-1.jpg" alt="gallery1" width="400px">
+       <img class="cards" src="assets/image-2.jpg" alt="gallery2" width="400px">
+       <img class="cards" src="assets/image-3.jpg" alt="gallery3" width="400px">
+     </div>
+   </section>
+   
       <section class="testimonials">
         <h2>Testimonials</h2>
         <blockquote><b><em>I think he's neat!</em></b></blockquote>
@@ -55,6 +55,6 @@
       </section>
     </main>
   
-  <footer> &#169 2021 Karen Sule</footer>
+  <footer> &#169; 2021 Karen Sule</footer>
 
   </body>
