--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
           <li class="contact"><a href="https://www.instagram.com/jsacopla/">Contact Us</a></li>
         </ul>
       </nav>
+    </header>  
+    
+    <section class="hero">
       <div class="hero">
         <p class="first">Jovial Serenity</p> 
         <p class="second">fashion x comfort</p>
         <div class="hero-image"></div>
       </div>
-    </header>   
-
+    </section>
+    
     <main>
       <section class="about">
         <h2 class>About Us</h2>
@@ -67,4 +70,3 @@
   <footer> &#169; 2021 Karen Sule</footer>
 
   </body>
-  
